--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div style="width: 400px;">
       
       <a-scene>
-        <a-sky src="GPTempdownload.jpg" rotation="0 -130 0"></a-sky>
+        <a-sky src="GPTempDownload.JPG" rotation="0 -130 0"></a-sky>
       </a-scene>
 
     </div>
